@@ -458,6 +458,9 @@ def main(global_config, **settings):
     config.add_route('get_departments',       'departments/')
 
     config.add_route('list_department_users', 'departments/{id}/users/list')
+    config.add_route('list_department_tasks', 'departments/{id}/tasks/list')
+
+    config.add_route('get_department_tasks',  'departments/{id}/tasks/')
 
     config.add_route('append_departments',   'departments/{id}/append') # TODO: this was not clear
 
